# auto_flight

./: CMakeLists.txt  default.yaml  package.xml
include/airsim/MavLinkCom/: MavLinkConnection.hpp
include/auto_flight/: auto_flight_octomap_state.h  auto_flight_state.h  destinateRequest.h  destinateResponse.h
include/cuda/: edge_detector.cuh  img_process_gpu.cuh  lock.cuh
include/flight/: Config.h  Frame.h  ImgPro.h  StereoMap.h  common_include.h
include/ros_traj_plan/: Trajectory.hpp  TrajectoryLibrary.hpp  airsimcommon.h  csvparser.h  searchdistance.h  uavtrans.h
launch/: airsim_flight_test.launch  airsim_image_view.launch  flying_pose_calibration.launch  guiji_map.rviz  mavros_flying_test.launch  octomap_build_test.launch  offlinemap_flyingtest.launch  px4.launch  rviz_display.launch
mapdata/: result.pcd  result3.pcd
msg/: auto_flight_octomap_state.msg  auto_flight_state.msg
record/: flight_state.sh  target_position.txt
src/: CMakeLists.txt  Config.cpp  Frame.cpp  ImgPro.cpp  StereoMap.cpp
src/cuda/: edge_detector.cu  img_process_gpu.cu
src/trajplanner/: Trajectory.cpp  TrajectoryLibrary.cpp  csvparser.c  searchdistance.cpp  uavtrans.cpp
test/: CMakeLists.txt  airsim_drone_test.cpp  airsim_flying_test.cpp  airsim_get_image.cpp  cam_config_test.cpp  enu_ned_frame2.cpp  flying_pose_calibration.cpp  mavros_flying_test.cpp  mavros_target_position.cpp  octomap_build_test.cpp  offline_pclmap_test.cpp  set_destination.cpp  trajplan_test.cpp  vo_estimate_relay.cpp
trajlib/: left-fly-00001-x.csv  right-fly-00002-x.csv  short-straight-fly-00006-x.csv  straight-fly-00000-x.csv
